--- a/ChatApp/Views/StoryBoards/Base.lproj/Main.storyboard
+++ b/ChatApp/Views/StoryBoards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HCv-mp-Oe4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oXe-Kj-3dl">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Conversation View Controller-->
+        <!--Chats-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversationViewController" customModule="ChatApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,19 +19,38 @@
                         <viewLayoutGuide key="safeArea" id="lB1-Fm-dtH"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="TDh-3T-5sX"/>
+                    <navigationItem key="navigationItem" title="Chats" id="TDh-3T-5sX"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="939.13043478260875" y="83.705357142857139"/>
+            <point key="canvasLocation" x="-1739" y="1136"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="PsB-Ai-5L3">
+            <objects>
+                <tabBarController id="oXe-Kj-3dl" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BOo-Hz-Aaa">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="HCv-mp-Oe4" kind="relationship" relationship="viewControllers" id="pR9-9f-eSK"/>
+                        <segue destination="Pog-lx-VCS" kind="relationship" relationship="viewControllers" id="jzX-rB-lSz"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S2k-Et-Y5T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-930" y="-410"/>
+        </scene>
+        <!--Chats-->
         <scene sceneID="8rx-Nw-MNE">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HCv-mp-Oe4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chats" id="fKh-pg-IhU"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oze-Ic-E56">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="oze-Ic-E56">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" name="AccentColor"/>
                         <color key="barTintColor" name="AccentColor"/>
@@ -49,12 +68,60 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IKs-Wu-waK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28.985507246376812" y="83.705357142857139"/>
+            <point key="canvasLocation" x="-1739" y="315"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="Z1X-m8-SkP">
+            <objects>
+                <navigationController id="Pog-lx-VCS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" id="FLH-nH-MYa"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="0Xk-AM-s9O">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="1Tn-pV-klL" kind="relationship" relationship="rootViewController" id="tSM-jQ-OyN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sGG-0x-DaP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-274" y="315"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="rhm-N3-2iu">
+            <objects>
+                <viewController id="1Tn-pV-klL" customClass="ProfileViewController" customModule="ChatApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="J4K-bL-18p">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="mv5-8m-NZd">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="2lu-CK-6NQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="mv5-8m-NZd" firstAttribute="leading" secondItem="2lu-CK-6NQ" secondAttribute="leading" id="DSl-uw-pph"/>
+                            <constraint firstItem="mv5-8m-NZd" firstAttribute="top" secondItem="2lu-CK-6NQ" secondAttribute="top" id="Qcq-Gz-1Nh"/>
+                            <constraint firstItem="2lu-CK-6NQ" firstAttribute="bottom" secondItem="mv5-8m-NZd" secondAttribute="bottom" id="dPf-3l-wuB"/>
+                            <constraint firstItem="2lu-CK-6NQ" firstAttribute="trailing" secondItem="mv5-8m-NZd" secondAttribute="trailing" id="pKM-Xy-mbz"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Profile" id="M4t-Rg-MpG"/>
+                    <connections>
+                        <outlet property="tableview" destination="mv5-8m-NZd" id="d25-N8-vV2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xqk-bC-USO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-275" y="1148"/>
         </scene>
     </scenes>
     <resources>
         <namedColor name="AccentColor">
-            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
