--- a/ChatApp/Views/StoryBoards/Base.lproj/Main.storyboard
+++ b/ChatApp/Views/StoryBoards/Base.lproj/Main.storyboard
@@ -36,6 +36,7 @@
                     <connections>
                         <segue destination="HCv-mp-Oe4" kind="relationship" relationship="viewControllers" id="pR9-9f-eSK"/>
                         <segue destination="Pog-lx-VCS" kind="relationship" relationship="viewControllers" id="jzX-rB-lSz"/>
+                        <segue destination="qFr-Ik-qeE" kind="relationship" relationship="viewControllers" id="INC-4j-Bab"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S2k-Et-Y5T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -77,6 +78,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sGG-0x-DaP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-274" y="315"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="i9H-l1-hSu">
+            <objects>
+                <navigationController id="qFr-Ik-qeE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="e1G-te-hOx"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bCb-rh-7qH">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Sfp-E5-fhs" kind="relationship" relationship="rootViewController" id="wUt-DA-fKB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QHi-Nd-ukP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="837" y="274"/>
+        </scene>
+        <!--Hi-->
+        <scene sceneID="Wpz-r8-e4G">
+            <objects>
+                <viewController id="Sfp-E5-fhs" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DEh-c8-QQn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="KGe-l0-0Q8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Hi" id="gJq-ZA-yiC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QCh-rV-B42" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1657" y="274"/>
         </scene>
         <!--Profile-->
         <scene sceneID="rhm-N3-2iu">
